--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,22 @@
     package="com.example.holamundo2">
 
     <!-- Permisos necesarios para VR -->
-    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.CAMERA" android:requiredFeature="false" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- AGREGADO: Permisos adicionales para Quest -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <!-- Características requeridas para VR -->
     <uses-feature android:name="android.hardware.vr.headtracking" android:required="true" />
     <uses-feature android:name="android.software.vr.mode" android:required="false" />
     <uses-feature android:glEsVersion="0x00030000" android:required="true" />
+    <!-- AGREGADO: Características específicas para Quest -->
+    <uses-feature android:name="android.hardware.vulkan.level" android:version="0" android:required="false" />
+    <uses-feature android:name="android.hardware.vulkan.version" android:version="0x401000" android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <!-- Metadatos para Oculus/Meta -->
     <application
@@ -19,17 +28,20 @@
         android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
         android:hardwareAccelerated="true">
 
-        <!-- Metadatos para el sistema Oculus -->
-        <meta-data android:name="com.oculus.supportedDevices" android:value="quest|quest2" />
+        <!-- CORREGIDO: Metadatos actualizados para Quest más recientes -->
+        <meta-data android:name="com.oculus.supportedDevices" android:value="quest|quest2|quest3" />
         <meta-data android:name="com.oculus.intent.category.VR" android:value="vr_only" />
         <meta-data android:name="com.oculus.vr.focusaware" android:value="true" />
+        <!-- AGREGADO: Configuraciones adicionales -->
+        <meta-data android:name="com.oculus.handtracking.supported" android:value="false" />
+        <meta-data android:name="com.oculus.handtracking.version" android:value="V2.0" />
 
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTask"
             android:screenOrientation="landscape"
-            android:configChanges="orientation|keyboardHidden|screenSize">
+            android:configChanges="orientation|keyboardHidden|screenSize|uiMode">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
