--- a/app/src/main/cpp/CmakeLists.txt
+++ b/app/src/main/cpp/CmakeLists.txt
@@ -3,33 +3,69 @@ cmake_minimum_required(VERSION 3.22.1)
 project("holamundo2")
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Desactivar warnings específicos para código JNI
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-return-type -Wno-unknown-pragmas")
+# Configuraciones de compilador para OpenXR
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unused-parameter")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fexceptions -frtti")
 
-# Encontrar paquetes necesarios
+# Configuraciones específicas para Release/Debug
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -DNDEBUG")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g -DDEBUG")
+
+# Encontrar librerías del sistema Android
 find_library(log-lib log)
 find_library(android-lib android)
 find_library(EGL-lib EGL)
 find_library(GLESv3-lib GLESv3)
 
-# Incluir directorios de OpenXR
-# Necesitarás descargar el OpenXR SDK y colocarlo en src/main/cpp/openxr/
+# Configuración de OpenXR
 set(OPENXR_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/openxr)
+
+# Verificar que existe el directorio OpenXR
+if(NOT EXISTS ${OPENXR_ROOT_DIR})
+    message(FATAL_ERROR "OpenXR SDK no encontrado en ${OPENXR_ROOT_DIR}. "
+            "Descarga el OpenXR SDK y extráelo en src/main/cpp/openxr/")
+endif()
+
+# Incluir headers de OpenXR
 include_directories(${OPENXR_ROOT_DIR}/include)
 
 # Buscar la librería OpenXR
 find_library(OPENXR_LIB
         NAMES openxr_loader
         PATHS ${OPENXR_ROOT_DIR}/libs/android/${ANDROID_ABI}
-        NO_DEFAULT_PATH)
+        NO_DEFAULT_PATH
+        REQUIRED
+)
+
+if(NOT OPENXR_LIB)
+    message(FATAL_ERROR "openxr_loader no encontrado para ${ANDROID_ABI} en ${OPENXR_ROOT_DIR}/libs/android/${ANDROID_ABI}")
+endif()
+
+message(STATUS "OpenXR loader encontrado: ${OPENXR_LIB}")
 
 # Crear la librería nativa
 add_library(holamundo_native SHARED
         native_openxr.cpp
+        # Agregar aquí más archivos .cpp si los tienes
 )
 
-# Enlazar librerías
+# Configurar propiedades de la librería
+set_target_properties(holamundo_native PROPERTIES
+        CXX_STANDARD 17
+        CXX_STANDARD_REQUIRED ON
+)
+
+# Definiciones de compilador
+target_compile_definitions(holamundo_native PRIVATE
+        XR_USE_PLATFORM_ANDROID
+        XR_USE_GRAPHICS_API_OPENGL_ES
+        GL_GLEXT_PROTOTYPES
+        EGL_EGLEXT_PROTOTYPES
+)
+
+# Enlazar todas las librerías necesarias
 target_link_libraries(holamundo_native
         ${log-lib}
         ${android-lib}
@@ -38,8 +74,12 @@ target_link_libraries(holamundo_native
         ${OPENXR_LIB}
 )
 
-# Configuraciones adicionales para OpenXR
-target_compile_definitions(holamundo_native PRIVATE
-        XR_USE_PLATFORM_ANDROID
-        XR_USE_GRAPHICS_API_OPENGL_ES
+# Configuraciones adicionales para debugging
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    target_compile_definitions(holamundo_native PRIVATE DEBUG_BUILD)
+endif()
+
+# Configurar rpath para encontrar librerías compartidas
+set_target_properties(holamundo_native PROPERTIES
+        INSTALL_RPATH_USE_LINK_PATH TRUE
 )
