--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,47 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.holamundo2">
+    xmlns:tools="http://schemas.android.com/tools">
+    <!--package="com.example.holamundo2">-->
 
-    <!-- Permisos necesarios para VR -->
-    <uses-permission android:name="android.permission.CAMERA" android:requiredFeature="false" />
+    <!-- Permisos esenciales para VR -->
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <!-- AGREGADO: Permisos adicionales para Quest -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
-    <!-- Características requeridas para VR -->
-    <uses-feature android:name="android.hardware.vr.headtracking" android:required="true" />
-    <uses-feature android:name="android.software.vr.mode" android:required="false" />
-    <uses-feature android:glEsVersion="0x00030000" android:required="true" />
-    <!-- AGREGADO: Características específicas para Quest -->
-    <uses-feature android:name="android.hardware.vulkan.level" android:version="0" android:required="false" />
-    <uses-feature android:name="android.hardware.vulkan.version" android:version="0x401000" android:required="false" />
+    <!-- Características de hardware requeridas -->
+    <uses-feature
+        android:name="android.hardware.vr.headtracking"
+        android:version="1"
+        android:required="true" />
+    <uses-feature
+        android:name="android.software.vr.mode"
+        android:required="false" />
+    <uses-feature
+        android:glEsVersion="0x00030000"
+        android:required="true" />
+
+    <!-- Características específicas para Quest -->
+    <uses-feature
+        android:name="android.hardware.vulkan.level"
+        android:version="0"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.vulkan.version"
+        android:version="0x401000"
+        android:required="false" />
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
 
-    <!-- Metadatos para Oculus/Meta -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
-        android:hardwareAccelerated="true">
+        android:hardwareAccelerated="true"
+        android:extractNativeLibs="true"
+        tools:targetApi="34">
 
-        <!-- CORREGIDO: Metadatos actualizados para Quest más recientes -->
-        <meta-data android:name="com.oculus.supportedDevices" android:value="quest|quest2|quest3" />
+        <!-- Metadatos para Oculus/Meta Quest -->
+        <meta-data android:name="com.oculus.supportedDevices" android:value="quest|quest2|quest3|questpro" />
         <meta-data android:name="com.oculus.intent.category.VR" android:value="vr_only" />
         <meta-data android:name="com.oculus.vr.focusaware" android:value="true" />
-        <!-- AGREGADO: Configuraciones adicionales -->
+
+        <!-- Configuraciones de tracking -->
         <meta-data android:name="com.oculus.handtracking.supported" android:value="false" />
         <meta-data android:name="com.oculus.handtracking.version" android:value="V2.0" />
+
+        <!-- Configuraciones de rendimiento -->
+        <meta-data android:name="com.oculus.application.mode" android:value="vr" />
+        <meta-data android:name="com.oculus.supportedDevices" android:value="quest|quest2|quest3|questpro" />
 
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTask"
             android:screenOrientation="landscape"
-            android:configChanges="orientation|keyboardHidden|screenSize|uiMode">
+            android:configChanges="orientation|keyboardHidden|screenSize|uiMode|density"
+            android:resizeableActivity="false">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
