--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.oculus.permission.HAND_TRACKING" />
 
     <!-- Características de hardware requeridas -->
     <uses-feature
@@ -42,8 +43,8 @@
         android:hardwareAccelerated="true"
         tools:targetApi="34">
 
-        <!-- METADATOS PARA OPENXR -->
-        <meta-data android:name="com.oculus.supportedDevices" android:value="quest2|quest3|questpro" />
+        <!-- METADATOS CRÍTICOS PARA OPENXR -->
+        <meta-data android:name="com.oculus.supportedDevices" android:value="quest|quest2|quest3|questpro" />
         <meta-data android:name="com.oculus.intent.category.VR" android:value="vr_only" />
         <meta-data android:name="com.oculus.vr.focusaware" android:value="true" />
 
@@ -69,6 +70,7 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="com.oculus.intent.category.VR" />
+                <!-- NUEVO: Intent filter para OpenXR -->
                 <category android:name="org.khronos.openxr.intent.category.IMMERSIVE_HMD" />
             </intent-filter>
         </activity>
